force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>[a0D][Order__c] Pedidos da organização.</description>
    <label>Ordem</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Número da ordem SF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordens</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>