force-app/main/default/objects/Order__c/fields/AccountAreaSalesLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountAreaSalesLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Preenchido automaticamente caso Conta esteja preenchida. Se houver mais de uma, será necessário preencher o &quot;Responsável Vendas&quot;</inlineHelpText>
    <label>Área de vendas</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AccountAreaSales__c.AccountLkp__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountLkp__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountAreaSales__c</referenceTo>
    <relationshipLabel>Ordens</relationshipLabel>
    <relationshipName>Ordens</relationshipName>
    <type>Lookup</type>
</CustomField>