force-app/main/default/objects/Order__c/fields/AccountCodeFml__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeFml__c</fullName>
    <formula>AccountLkp__r.CodeCustomerTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cód. Cliente</label>
    <type>Text</type>
</CustomField>