force-app/main/default/objects/Order__c/fields/AccountLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Originalmente Emissor da Ordem no SAP</description>
    <inlineHelpText>Preenchido automaticamente se Área de Vendas for preenchida</inlineHelpText>
    <label>Conta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Conta jurídica SAP, Conta pessoal SAP</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ordens</relationshipLabel>
    <relationshipName>Ordens</relationshipName>
    <type>Lookup</type>
</CustomField>