force-app/main/default/objects/Order__c/fields/AccountReceiverLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountReceiverLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Caso seja deixado em branco, será utilizada a conta Emissor</inlineHelpText>
    <label>Recebedor mercadoria</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Account.PartnerTypeTxt__c</field>
            <operation>equals</operation>
            <value>Recebedor</value>
        </filterItems>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountLkp__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.AccountLkp__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recebedor mercadoria</relationshipLabel>
    <relationshipName>Ordens1</relationshipName>
    <type>Lookup</type>
</CustomField>