force-app/main/default/objects/Order__c/fields/AverageZCOTFml__c.field-meta.xml
<CustomField>
    <fullName>AverageZCOTFml__c</fullName>
    <formula>TotalZCOTNmb__c / ( TotalLiquidPriceNmb__c + TotalZCOTNmb__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desconto de Cotação Médio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>