force-app/main/default/objects/Order__c/fields/CarrierCityTxt__c.field-meta.xml
<CustomField>
    <fullName>CarrierCityTxt__c</fullName>
    <label>Cidade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>