force-app/main/default/objects/Order__c/fields/CarrierCNPJCPFTxt__c.field-meta.xml
<CustomField>
    <fullName>CarrierCNPJCPFTxt__c</fullName>
    <label>CNPJ/CPF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>