force-app/main/default/objects/Order__c/fields/CarrierLkp__c.field-meta.xml
<CustomField>
    <fullName>CarrierLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motorista</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Carrier__c.TypeTxt__c</field>
            <operation>equals</operation>
            <value>PE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Ordens</relationshipLabel>
    <relationshipName>Ordens</relationshipName>
    <type>Lookup</type>
</CustomField>