force-app/main/default/objects/Order__c/fields/CarrierName1Txt__c.field-meta.xml
<CustomField>
    <fullName>CarrierName1Txt__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Nome 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>