force-app/main/default/objects/Order__c/fields/CarrierName2Txt__c.field-meta.xml
<CustomField>
    <fullName>CarrierName2Txt__c</fullName>
    <label>Nome 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>