force-app/main/default/objects/Order__c/fields/CarrierPostalCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>CarrierPostalCodeTxt__c</fullName>
    <label>CEP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>