force-app/main/default/objects/Order__c/fields/CarrierStateInscriptionTxt__c.field-meta.xml
<CustomField>
    <fullName>CarrierStateInscriptionTxt__c</fullName>
    <label>Inscrição Est</label>
    <length>100</length>
    <type>Text</type>
</CustomField>