force-app/main/default/objects/Order__c/fields/CarrierStateTxt__c.field-meta.xml
<CustomField>
    <fullName>CarrierStateTxt__c</fullName>
    <label>Estado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>