force-app/main/default/objects/Order__c/fields/CarrierStreetTxt__c.field-meta.xml
<CustomField>
    <fullName>CarrierStreetTxt__c</fullName>
    <label>Rua / Nº</label>
    <length>100</length>
    <type>Text</type>
</CustomField>