force-app/main/default/objects/Order__c/fields/CarrierTxt__c.field-meta.xml
<CustomField>
    <fullName>CarrierTxt__c</fullName>
    <label>Motorista Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>