force-app/main/default/objects/Order__c/fields/CaseLkp__c.field-meta.xml
<CustomField>
    <fullName>CaseLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Ordens</relationshipLabel>
    <relationshipName>Ordens</relationshipName>
    <type>Lookup</type>
</CustomField>