force-app/main/default/objects/Order__c/fields/ClientTransportBln__c.field-meta.xml
<CustomField>
    <fullName>ClientTransportBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informação se o próprio cliente fará a retirada da mercadoria na Bidim.</description>
    <label>Cliente Retira</label>
    <type>Checkbox</type>
</CustomField>