force-app/main/default/objects/Order__c/fields/CodeActivitySectorTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeActivitySectorTxt__c</fullName>
    <label>Código setor atividade</label>
    <length>2</length>
    <type>Text</type>
</CustomField>