force-app/main/default/objects/Order__c/fields/CodeDistribubutionChannelTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeDistribubutionChannelTxt__c</fullName>
    <label>Código canal distribuição</label>
    <length>2</length>
    <type>Text</type>
</CustomField>