force-app/main/default/objects/Order__c/fields/CodeSalesOrganizationTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeSalesOrganizationTxt__c</fullName>
    <label>Código organização de vendas</label>
    <length>4</length>
    <type>Text</type>
</CustomField>