force-app/main/default/objects/Order__c/fields/CommercialRemarkTxt__c.field-meta.xml
<CustomField>
    <fullName>CommercialRemarkTxt__c</fullName>
    <label>Observações comerciais</label>
    <type>TextArea</type>
</CustomField>