force-app/main/default/objects/Order__c/fields/CoordinatorLkp__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recebe, através de um Process Builder, o ID encontrado no campo de mesmo nome do objeto Vendedor.</description>
    <label>Coordenador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ordens</relationshipName>
    <type>Lookup</type>
</CustomField>