force-app/main/default/objects/Order__c/fields/CreditStatusTxt__c.field-meta.xml
<CustomField>
    <fullName>CreditStatusTxt__c</fullName>
    <label>Status de crédito</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vazio - Verif.crédito não foi efetuada</fullName>
            </value>
            <value>
                <fullName>A - Verif.crédito foi efetuada, operação oK</fullName>
            </value>
            <value>
                <fullName>B - Verif.crédito foi efetuada, operação não oK</fullName>
            </value>
            <value>
                <fullName>C - Verif.crédito efetuada, operação não oK, liberação parcial</fullName>
            </value>
            <value>
                <fullName>D - Ordem liberada pelo crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>