force-app/main/default/objects/Order__c/fields/CustomerGroup3Txt__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroup3Txt__c</fullName>
    <label>Tipo de embalagem</label>
    <length>3</length>
    <type>Text</type>
</CustomField>