force-app/main/default/objects/Order__c/fields/CustomerGroup5Txt__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroup5Txt__c</fullName>
    <label>Programação da ordem</label>
    <length>3</length>
    <type>Text</type>
</CustomField>