force-app/main/default/objects/Order__c/fields/CustomIDTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIDTxt__c</fullName>
    <externalId>true</externalId>
    <label>Número da Ordem SAP</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>