force-app/main/default/objects/Order__c/fields/DescriptionSalesOfficeFml__c.field-meta.xml
<CustomField>
    <fullName>DescriptionSalesOfficeFml__c</fullName>
    <formula>TEXT(AccountAreaSalesLkp__r.DescriptionSalesOfficeTxt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição escritório de vendas</label>
    <type>Text</type>
</CustomField>