force-app/main/default/objects/Order__c/fields/ErrorMessageTxt__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessageTxt__c</fullName>
    <description>Mensagens de erro na integração</description>
    <label>Mensagem de Erro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>