force-app/main/default/objects/Order__c/fields/FirstDayNextMonthDte__c.field-meta.xml
<CustomField>
    <fullName>FirstDayNextMonthDte__c</fullName>
    <description>Primeiro dia do mês seguinte, para marcar a flag de PVC desatualizado</description>
    <formula>IF(
  MONTH( DATEVALUE(CreatedDate) ) = 12,
  DATE( YEAR( DATEVALUE(CreatedDate)) + 1, 1, 1 ),
  DATE( YEAR( DATEVALUE(CreatedDate)), MONTH ( DATEVALUE(CreatedDate)) + 1, 1 )  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primeiro dia Mês seguinte</label>
    <type>Date</type>
</CustomField>