force-app/main/default/objects/Order__c/fields/IncotermsTxt__c.field-meta.xml
<CustomField>
    <fullName>IncotermsTxt__c</fullName>
    <label>Incoterms</label>
    <length>4</length>
    <type>Text</type>
</CustomField>