force-app/main/default/objects/Order__c/fields/InvoiceHeaderTxt__c.field-meta.xml
<CustomField>
    <fullName>InvoiceHeaderTxt__c</fullName>
    <label>Texto cabeçalho nota fiscal</label>
    <type>TextArea</type>
</CustomField>