force-app/main/default/objects/Order__c/fields/IPITotalValueNmb__c.field-meta.xml
<CustomField>
    <fullName>IPITotalValueNmb__c</fullName>
    <label>Total IPI</label>
    <summarizedField>OrderItem__c.ValueIPI__c</summarizedField>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>