force-app/main/default/objects/Order__c/fields/ItemCounterNmb__c.field-meta.xml
<CustomField>
    <fullName>ItemCounterNmb__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Preenchido via trigger sempre que um item é adicionado, para incrementar o ItemNumberTxt</description>
    <label>Contador de Itens</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>