force-app/main/default/objects/Order__c/fields/ItemErrorMessageTxt__c.field-meta.xml
<CustomField>
    <fullName>ItemErrorMessageTxt__c</fullName>
    <label>Erros Itens</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>