force-app/main/default/objects/Order__c/fields/ItemsCountNmb__c.field-meta.xml
<CustomField>
    <fullName>ItemsCountNmb__c</fullName>
    <label>Número de Itens</label>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>