force-app/main/default/objects/Order__c/fields/ItemStatus__c.field-meta.xml
<CustomField>
    <fullName>ItemStatus__c</fullName>
    <label>Status Itens</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ItemStatus</valueSetName>
    </valueSet>
</CustomField>