force-app/main/default/objects/Order__c/fields/ItemStatusNumberNmb__c.field-meta.xml
<CustomField>
    <fullName>ItemStatusNumberNmb__c</fullName>
    <description>Guarda o menor valor dentre os status dos itens pertencentes ao pedido.</description>
    <label>Número do status do item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>