force-app/main/default/objects/Order__c/fields/ItemsWithZCOT__c.field-meta.xml
<CustomField>
    <fullName>ItemsWithZCOT__c</fullName>
    <label>Itens com ZCOT</label>
    <summaryFilterItems>
        <field>OrderItem__c.ZCOT__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>