force-app/main/default/objects/Order__c/fields/LiquidCostNmb__c.field-meta.xml
<CustomField>
    <fullName>LiquidCostNmb__c</fullName>
    <label>Valor líquido</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>