force-app/main/default/objects/Order__c/fields/MixConexFml__c.field-meta.xml
<CustomField>
    <fullName>MixConexFml__c</fullName>
    <formula>IF(TotalROLConexNmb__c != 0 || ROLTubesNmb__c != 0,
TotalROLConexNmb__c  / (TotalROLConexNmb__c  + ROLTubesNmb__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mix Conexão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>