force-app/main/default/objects/Order__c/fields/NetWeightKgNmb__c.field-meta.xml
<CustomField>
    <fullName>NetWeightKgNmb__c</fullName>
    <label>Peso Líquido (Kg)</label>
    <summarizedField>OrderItem__c.TotalNetWeightKgNmb__c</summarizedField>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>