force-app/main/default/objects/Order__c/fields/OpportunityLkp__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ordens</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>