force-app/main/default/objects/Order__c/fields/Ordem_OrderSAP__c.field-meta.xml
<CustomField>
    <fullName>Ordem_OrderSAP__c</fullName>
    <formula>IF(CONTAINS( $User.UIThemeDisplayed , &apos;Theme3&apos;),CustomIDTxt__c,HYPERLINK( &apos;/&apos;&amp;Id ,CustomIDTxt__c, &apos;_self&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordem SAP</label>
    <type>Text</type>
</CustomField>