force-app/main/default/objects/Order__c/fields/OrderDateDte__c.field-meta.xml
<CustomField>
    <fullName>OrderDateDte__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Data pedido</label>
    <type>Date</type>
</CustomField>