force-app/main/default/objects/Order__c/fields/OrderDeltaFml__c.field-meta.xml
<CustomField>
    <fullName>OrderDeltaFml__c</fullName>
    <formula>RelativeGainFml__c  - ( TotalReferenceGainNmb__c / TotalROLNmb__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta do Pedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>