force-app/main/default/objects/Order__c/fields/OrderNumberTxt__c.field-meta.xml
<CustomField>
    <fullName>OrderNumberTxt__c</fullName>
    <label>Número do pedido do cliente</label>
    <length>35</length>
    <type>Text</type>
</CustomField>