force-app/main/default/objects/Order__c/fields/OrderReasonTxt__c.field-meta.xml
<CustomField>
    <fullName>OrderReasonTxt__c</fullName>
    <label>Motivo da Ordem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrderReason</valueSetName>
    </valueSet>
</CustomField>