force-app/main/default/objects/Order__c/fields/OrderStatusTxt__c.field-meta.xml
<CustomField>
    <fullName>OrderStatusTxt__c</fullName>
    <label>Status da ordem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
            </value>
            <value>
                <fullName>InApproval</fullName>
                <label>Em Aprovação</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Aprovado</label>
            </value>
            <value>
                <fullName>SentToSAP</fullName>
                <label>Enviado SAP</label>
            </value>
            <value>
                <fullName>Não processado</fullName>
            </value>
            <value>
                <fullName>Processado parcialmente</fullName>
            </value>
            <value>
                <fullName>Processado completamente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>