force-app/main/default/objects/Order__c/fields/OrderTypeLkp__c.field-meta.xml
<CustomField>
    <fullName>OrderTypeLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Preenchido automaticamente com ZNOV caso deixe em branco</inlineHelpText>
    <label>Tipo de Ordem</label>
    <referenceTo>OrderType__c</referenceTo>
    <relationshipLabel>Ordens</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>