force-app/main/default/objects/Order__c/fields/OrderTypePicklistTxt__c.field-meta.xml
<CustomField>
    <fullName>OrderTypePicklistTxt__c</fullName>
    <defaultValue>&apos;ZNOV&apos;</defaultValue>
    <label>Tipo de Ordem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrderType</valueSetName>
    </valueSet>
</CustomField>