force-app/main/default/objects/Order__c/fields/OrderTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>OrderTypeTxt__c</fullName>
    <label>Código do Tipo de ordem</label>
    <length>4</length>
    <type>Text</type>
</CustomField>