force-app/main/default/objects/Order__c/fields/OutdatedPVCBln__c.field-meta.xml
<CustomField>
    <fullName>OutdatedPVCBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica se o PVC está desatualizado, com dados do mês anterior.</description>
    <label>PVC Desatualizado</label>
    <type>Checkbox</type>
</CustomField>