force-app/main/default/objects/Order__c/fields/PaymentTermLkp__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de Pagamento</label>
    <referenceTo>PaymentTerm__c</referenceTo>
    <relationshipLabel>Ordens</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>