force-app/main/default/objects/Order__c/fields/PaymentTermTxt__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermTxt__c</fullName>
    <label>Condição de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentTerm</valueSetName>
    </valueSet>
</CustomField>