force-app/main/default/objects/Order__c/fields/PaymentTermTxtOld__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermTxtOld__c</fullName>
    <label>Condição de pagamento</label>
    <length>4</length>
    <type>Text</type>
</CustomField>