force-app/main/default/objects/Order__c/fields/PricebookLkp__c.field-meta.xml
<CustomField>
    <fullName>PricebookLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catálogo de Produtos</label>
    <referenceTo>Pricebook__c</referenceTo>
    <relationshipLabel>Ordens</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>