force-app/main/default/objects/Order__c/fields/PriceExpirationFml__c.field-meta.xml
<CustomField>
    <fullName>PriceExpirationFml__c</fullName>
    <formula>DateValue(CreatedDate) + 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validade Preços</label>
    <type>Date</type>
</CustomField>