force-app/main/default/objects/Order__c/fields/PrimaryBln__c.field-meta.xml
<CustomField>
    <fullName>PrimaryBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o pedido é o principal de uma oportunidade</description>
    <inlineHelpText>Somente uma ordem primária por oportunidade.</inlineHelpText>
    <label>Primário</label>
    <type>Checkbox</type>
</CustomField>