force-app/main/default/objects/Order__c/fields/PVCChannelFml__c.field-meta.xml
<CustomField>
    <fullName>PVCChannelFml__c</fullName>
    <formula>AccountAreaSalesLkp__r.ChannelLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal PVC</label>
    <type>Text</type>
</CustomField>