force-app/main/default/objects/Order__c/fields/PVCStringTxt__c.field-meta.xml
<CustomField>
    <fullName>PVCStringTxt__c</fullName>
    <description>String PVC, em formato JSON, para uso do componente do PVC. Vêm via interface</description>
    <label>Parâmetros PVC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>