force-app/main/default/objects/Order__c/fields/QuotationBln__c.field-meta.xml
<CustomField>
    <fullName>QuotationBln__c</fullName>
    <formula>TEXT(OrderStatusTxt__c) = &apos;Rascunho&apos; ||
TEXT(OrderStatusTxt__c) = &apos;InApproval&apos; ||
TEXT(OrderStatusTxt__c) = &apos;Approved&apos; ||
TEXT(OrderStatusTxt__c) = &apos;SentToSAP&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cotação</label>
    <type>Checkbox</type>
</CustomField>