force-app/main/default/objects/Order__c/fields/RemittanceDesiredDateDte__c.field-meta.xml
<CustomField>
    <fullName>RemittanceDesiredDateDte__c</fullName>
    <label>Data desejada remessa</label>
    <type>Date</type>
</CustomField>