force-app/main/default/objects/Order__c/fields/RepresentativeRemarkTxt__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeRemarkTxt__c</fullName>
    <label>Observações representantes</label>
    <type>TextArea</type>
</CustomField>