force-app/main/default/objects/Order__c/fields/ROLTubesNmb__c.field-meta.xml
<CustomField>
    <fullName>ROLTubesNmb__c</fullName>
    <label>ROL Tubos</label>
    <summarizedField>OrderItem__c.ValueROLFml__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem__c.MaterialGroupTxt__c</field>
        <operation>equals</operation>
        <value>01</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>