force-app/main/default/objects/Order__c/fields/SalesOfficeFml__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeFml__c</fullName>
    <formula>TEXT(AccountAreaSalesLkp__r.SalesOfficeTxt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escritório de vendas</label>
    <type>Text</type>
</CustomField>