force-app/main/default/objects/Order__c/fields/SAPGUIDTxt__c.field-meta.xml
<CustomField>
    <fullName>SAPGUIDTxt__c</fullName>
    <label>SAP GUID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>