force-app/main/default/objects/Order__c/fields/SellerLkp__c.field-meta.xml
<CustomField>
    <fullName>SellerLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Preenchido automaticamente se Área de Vendas for preenchida</inlineHelpText>
    <label>Responsável Vendas</label>
    <referenceTo>Seller__c</referenceTo>
    <relationshipLabel>Ordens</relationshipLabel>
    <relationshipName>Ordens</relationshipName>
    <type>Lookup</type>
</CustomField>