force-app/main/default/objects/Order__c/fields/SellerNumberNmb__c.field-meta.xml
<CustomField>
    <fullName>SellerNumberNmb__c</fullName>
    <label>Código do Vendedor</label>
    <length>8</length>
    <type>Text</type>
</CustomField>