force-app/main/default/objects/Order__c/fields/ShippingSplitDoneBln__c.field-meta.xml
<CustomField>
    <fullName>ShippingSplitDoneBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se já foi realizada a quebra de remessa</description>
    <label>Quebra de Remessa Realizada</label>
    <type>Checkbox</type>
</CustomField>