force-app/main/default/objects/Order__c/fields/SuggestedDoneBln__c.field-meta.xml
<CustomField>
    <fullName>SuggestedDoneBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca como verdadeiro quando acessa a tela de &quot;Produtos Sugeridos&quot;</description>
    <label>Visualizou Sugeridos</label>
    <type>Checkbox</type>
</CustomField>