force-app/main/default/objects/Order__c/fields/TotalAbsoluteGainNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalAbsoluteGainNmb__c</fullName>
    <label>Ganho Absoluto Total</label>
    <summarizedField>OrderItem__c.ValueGainFml__c</summarizedField>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>