force-app/main/default/objects/Order__c/fields/TotalAmountNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountNmb__c</fullName>
    <label>Valor total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>