force-app/main/default/objects/Order__c/fields/TotalLiquidPriceNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalLiquidPriceNmb__c</fullName>
    <label>Total do Pedido Sem IPI</label>
    <summarizedField>OrderItem__c.ValueROBNoIPIFml__c</summarizedField>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>