force-app/main/default/objects/Order__c/fields/TotalPriceNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalPriceNmb__c</fullName>
    <label>Total do Pedido</label>
    <summarizedField>OrderItem__c.ValueROBFml__c</summarizedField>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>