force-app/main/default/objects/Order__c/fields/TotalReferenceGainNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalReferenceGainNmb__c</fullName>
    <label>Ganho Referência Total</label>
    <summarizedField>OrderItem__c.YGAN__c</summarizedField>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>