force-app/main/default/objects/Order__c/fields/TotalROLNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalROLNmb__c</fullName>
    <label>Total Líquido</label>
    <summarizedField>OrderItem__c.ValueROLFml__c</summarizedField>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>