force-app/main/default/objects/Order__c/fields/TotalSTValueNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalSTValueNmb__c</fullName>
    <label>Total Subs. Tributária do Pedido</label>
    <summarizedField>OrderItem__c.ValueST__c</summarizedField>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>