force-app/main/default/objects/Order__c/fields/TotalZCOTNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalZCOTNmb__c</fullName>
    <label>Desconto de Cotação Total</label>
    <summarizedField>OrderItem__c.TotalZCOT__c</summarizedField>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>