force-app/main/default/objects/Order__c/fields/Value16701Nmb__c.field-meta.xml
<CustomField>
    <fullName>Value16701Nmb__c</fullName>
    <label>Total Tubo de 100 (Plastubos)</label>
    <summarizedField>OrderItem__c.ValueROBNoIPIFml__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem__c.ProductCodeTxt__c</field>
        <operation>equals</operation>
        <value>16701</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem__c.OrderMdt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>