force-app/main/default/objects/Order__c/fields/VolumeNmb__c.field-meta.xml
<CustomField>
    <fullName>VolumeNmb__c</fullName>
    <label>Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>