force-app/main/default/objects/Order__c/fields/WeightNmb__c.field-meta.xml
<CustomField>
    <fullName>WeightNmb__c</fullName>
    <label>Peso</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>