force-app/main/default/objects/Order__c/fields/YPME__c.field-meta.xml
<CustomField>
    <fullName>YPME__c</fullName>
    <description>Descconto do PVC referente à Meta de Conexão</description>
    <label>Desconto Meta Conexão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>