force-app/main/default/objects/Order__c/fields/YPMX__c.field-meta.xml
<CustomField>
    <fullName>YPMX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o pedido excedeu a meta de produtos runner, bloqueando descontos de volume e conexão</description>
    <label>Excedeu Runner</label>
    <type>Checkbox</type>
</CustomField>