force-app/main/default/objects/Order__c/fields/YPSO__c.field-meta.xml
<CustomField>
    <fullName>YPSO__c</fullName>
    <description>Desconto referente a Cesta de Produtos Especiais, do PVC</description>
    <label>Desconto CPE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>