force-app/main/default/objects/Order__c/fields/YPVO__c.field-meta.xml
<CustomField>
    <fullName>YPVO__c</fullName>
    <description>Desconto de volume do PVC</description>
    <label>Desconto de Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>