force-app/main/default/objects/Order__c/fields/YPXI__c.field-meta.xml
<CustomField>
    <fullName>YPXI__c</fullName>
    <description>Desconto do PVC referente ao Mix Irrigação</description>
    <label>Desconto Mix Irriga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>